fixed spacing on response page

--- a/src/components/Page/addResponse/AddResponseHeader.module.sass
+++ b/src/components/Page/addResponse/AddResponseHeader.module.sass
@@ -74,6 +74,7 @@
 .form .secondRowDiv
     padding-top: auto
     padding-bottom: auto
+    margin-top: 0.75rem
     display: flex
     width: 20%
     margin-right: 80%
@@ -152,7 +153,11 @@
         margin-left: auto
         margin-right: auto
         justify-content: center
+        
     
     .responseInput
         width: 80% !important
+
+    .responseContainer
+        padding-bottom: 5rem
     
